# chonker

./: LICENSE  README.md  setup.cfg  tox.ini
src/chonker/: __init__.py  chonker.py
test/: test_chonker.py
